re PR middle-end/26611 (openmp gomp ICE at gimplify.c:4257)

PR middle-end/26611
	* gimplify.c (gimplify_bind_expr): Only call omp_add_variable on
	non-global variables that don't have DECL_SEEN_IN_BIND_EXPR_P bit
	set yet or weren't marked as local yet.

	* g++.dg/gomp/pr26611-1.C: New test.
	* g++.dg/gomp/pr26611-2.C: New test.

From-SVN: r112351