gcc/testsuite/g++.dg/gomp/pr26611-1.C
@@ -1,0 +1,15 @@
+// PR middle-end/26611
+// { dg-do compile }
+
+void
+foo ()
+{
+#pragma omp parallel
+  try
+    {
+      int q = 1;
+    }
+  catch (...)
+    {
+    }
+}
