gcc/testsuite/g++.dg/gomp/pr26611-2.C
@@ -1,0 +1,15 @@
+// PR middle-end/26611
+// { dg-do compile }
+
+void
+foo ()
+{
+#pragma omp parallel
+  try
+    {
+    }
+  catch (...)
+    {
+      int q = 1;
+    }
+}
